# lucid

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  pitch-deck-20260418-120000.html  submission.html  test.sh
.claude/: settings.json
cli/: Cargo.toml
cli/src/: intent_utils.rs  lib.rs  main.rs  pda.rs  rpc.rs  types.rs
cli/src/commands/: approve.rs  audit.rs  cancel.rs  execute.rs  generate.rs  mod.rs  propose.rs  verify.rs  wallet.rs
cli/tests/: audit_tests.rs  build_intent_bytes_tests.rs  generate_verify_tests.rs  pda_tests.rs  serialization_tests.rs  template_hash_tests.rs  types_tests.rs
clients/js/: package-lock.json  package.json  tsconfig.declarations.json  tsup.config.ts
clients/rust/: Cargo.toml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/public/: logo-preview.html
dashboard/scripts/: snapshot-demo-wallet.mjs
dashboard/src/: App.tsx  index.css  main.tsx
demo/: crowdfunding.json  run.sh  verify_spl_seed_e2e.sh
demo/crowdfunding_programs/: rwa_transfer_hook-keypair.json
demo/crowfunding_programs/: crowdfunding-keypair.json  issuance-keypair.json
demo/intents/: sol_transfer.json  spl_transfer.json
demo/squads_programs/: program_config.json
design-system/lucid/: MASTER.md
idl/: lucid.json
intents/: add_intents_batch.json  approve.json  cancel.json  cleanup.json  emit_event.json  execute.json  propose.json
intents/campfire/: create_pool.json  deposit.json  initialize_global_config.json  issue_rwa.json  redeem.json
intents/campfire-rwa/: claim.json  execute.json  init_ledger.json  init_mint_state.json  initialize.json  submit_yield.json
intents/lucid/: add_intent.json  add_intents_batch.json  approve.json  cancel.json  cleanup.json  create_wallet.json  deactivate_intent.json  emit_event.json  execute.json  freeze_wallet.json  propose.json
marketing-video/: DEMO_SHOT_LIST.md  TTS_SCRIPT.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
marketing-video/src/: Root.tsx  fonts.ts  index.ts  theme.ts
pitch_deck/: pitch-deck-20260418-120000.html  submission.html  x-header.html
pitch_deck/x-header-assets/: brief.md
programs/lucid/: Cargo.toml  txtx.yml
programs/lucid/runbooks/: README.md
programs/lucid/runbooks/deployment/: main.tx
programs/lucid/src/: idl.rs  lib.rs
programs/lucid/src/instructions/: add_intent.rs  add_intents_batch.rs  approve.rs  cancel.rs  cleanup.rs  create_wallet.rs  deactivate_intent.rs  emit_event.rs  execute.rs  freeze_wallet.rs  mod.rs  propose.rs
programs/lucid/src/instructions/execute/: custom_cpi.rs  meta.rs  mod.rs  resolve.rs
programs/lucid/src/state/: accounts.rs  byte_pool.rs  constants.rs  ed25519.rs  errors.rs  message.rs  mod.rs  param_validation.rs
programs/lucid/src/utils/: macros.rs
programs/lucid/tests/: audit_regressions.rs  lifecycle.rs  proposal.rs  security.rs
programs/lucid/tests/helpers/: ed25519.rs  instructions.rs  intent.rs  mod.rs  setup.rs
scripts/: generate-clients.mjs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  (+4 more)
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
tests/rust/src/helpers/: ed25519.rs  instructions.rs  intent.rs  mod.rs  pda.rs  setup.rs
tests/rust/tests/: lifecycle.rs  proposal.rs  security.rs
(+75 files in other folders)
