[package]
name = "lucid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
idl = []

[dependencies]
pinocchio = { version = "0.11", features = ["alloc"] }
pinocchio-system = "0.6"
pinocchio-log = "0.5"
pinocchio-pubkey = "0.3"
five8_const = "1.0"
solana-address = { version = "2.6", features = ["curve25519"] }
shank = "0.4"

[dev-dependencies]
lucid-client = { path = "../../clients/rust" }
litesvm = { version = "0.11", features = ["precompiles"] }
solana-account = "3.2"
solana-instruction = "3.0"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-message = "3.0"
solana-transaction = { version = "3.0", features = ["verify"] }
solana-hash = "3.1"
solana-system-interface = { version = "2.0", features = ["bincode"] }
solana-sdk-ids = "3.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
