[package]
name = "lucid-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lucid-client = { path = "../../clients/rust" }
litesvm = { version = "0.11", features = ["precompiles"] }
solana-address = "2.0"
solana-account = "3.2"
solana-instruction = "3.0"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-message = "3.0"
solana-transaction = { version = "3.0", features = ["verify"] }
solana-hash = "3.1"
solana-system-interface = { version = "2.0", features = ["bincode"] }
solana-sdk-ids = "3.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

[[test]]
name = "proposal"
path = "tests/proposal.rs"

[[test]]
name = "security"
path = "tests/security.rs"
